# aura-inspector

./: .gitignore  README.md  pyproject.toml
scripts/: bambda  bcheck
src/: aura_cli.py  aura_helper.py  colored_logger.py
